# awful_knowledge_synthesizer

./: .gitignore  Cargo.toml  README.md
books/: Barbara Oakley | A Mind for Numbers.pdf.txt.yaml  Corbett, Edward P. J. | Classical rhetoric for the modern student-Oxford University Press.pdf.txt.yaml  Irving M. Copi, Carl Cohen, Victor Rodych | Introduction to Logic.pdf.txt.yaml  Jeremy Kun | A Programmer’s Introduction to Mathematics.pdf.txt.yaml  Michael Spivak | Calculus.pdf.txt.yaml  Mortimer J. Adler, Charles Van Doren | How to Read a Book.pdf.txt.yaml  Neuronwaves | Critical Thinking Logic and Problem Solving.pdf.txt  Sidney Greenbaum, Gerald Nelson | An Introduction to English Grammar-Longman.pdf.txt.yaml  Stephen E. Nadeau | The Neural Architecture of Grammar.pdf.txt.yaml  Thomas S. Kane | The New Oxford Guide to Writing.pdf.txt.yaml  remove_ctrl_chars.nu
complete/: A Programmer’s Introduction to Mathematics_questions.yaml  An Introduction to English Grammar-Longman_questions.yaml  Calculus_questions.yaml  How to Read a Book_questions.yaml  The Neural Architecture of Grammar_questions.yaml  The Trivium The Liberal Arts of Logic, Grammar, and Rhetoric_questions.yaml  Trigonometry_questions.yaml
config/: config.yaml
manpages/: AMPArtworkAgent.txt  AMPDiscoveryService.txt  APFSUserAgent.txt  AVCAssistant.txt  AddressBookSourceSync.txt  AppleQEMUGuestAgent.txt  AppleVirtualPlatformHIDBridge.txt  Archetype.txt  AssetCacheAgent.txt  AssetCacheLocatorService.txt  AssetCacheLocatorUtil.txt  AssetCacheManagerService.txt  AssetCacheTetheratorService.txt  BTLEServer.txt  (+1143 more)
(+4064 files in other folders)
